add padding on footer

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 		<!-- End content -->
 
 		<footer>
-			<div class="container-fluid">
+			<div class="container-fluid" style="padding-bottom: 2em;">
 				<div class="row">
 					<div class="col-md-6">
 						<p>Copyright © 2021 by Eclez</p>
