--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
-	<title>Photofolio</title>
+	<title>Eclez</title>
 
 	<meta charset="utf-8">
 
