add target blank

--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
 						</div>
 						<div class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a class="active" href="https://www.imvu.com/catalog/web_add_contact.php?contact=Eclez">Add</a></li>
-								<li><a href="https://www.imvu.com/catalog/web_send_message_widget.php?recipient_id=180950725">Send Message</a></li>
-								<li><a href="https://www.imvu.com/catalog/web_send_message_widget.php?recipient_id=180950725">Block</a></li>
-								<li><a href="https://www.imvu.com/catalog/web_flag_homepage.php?flag_homepage=180950725">Report</a></li>
+								<li><a class="active" href="https://www.imvu.com/catalog/web_add_contact.php?contact=Eclez" target="_blank">Add</a></li>
+								<li><a href="https://www.imvu.com/catalog/web_send_message_widget.php?recipient_id=180950725" target="_blank">Send Message</a></li>
+								<li><a href="https://www.imvu.com/catalog/web_send_message_widget.php?recipient_id=180950725" target="_blank">Block</a></li>
+								<li><a href="https://www.imvu.com/catalog/web_flag_homepage.php?flag_homepage=180950725" target="_blank">Report</a></li>
 							</ul>
 						</div>
 					</div>
