add latest product

--- a/index.html
+++ b/index.html
@@ -278,6 +278,17 @@
 			</header>
 			<!-- End Header -->
 
+			<!-- instagram feed section -->
+			<section class="instagram-feed-section" style="height: 250px;">
+				<h1>My Latest Products</h1>
+				<center>
+				<style type="text/css">#dev_panel{display:none}</style>
+				    
+				<iframe name="imvustylez_panel1622721004" src="https://avatars.imvu.com/catalog/web_panel.php?section=mp_left&panel=dev_panel&av=Eclez&width=950&height=250" allowtransparency="true" style="width:950px;height:250px;border:0px;"></iframe>
+			</center>
+			</section>
+			
+			<!-- End instagram feed section -->
 			
 		</div>
 		<!-- End content -->
