--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 	<meta charset="utf-8">
 
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
 
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700|Montserrat:400,700|Roboto:300,300i,400,400i,500,500i,700,700i,900,900i|Yesteryear" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -267,10 +267,13 @@
 						</div>
 						<div class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-right">
+								<li><a href="https://www.facebook.com/eclez.vu/" target="_blank">Facebook</a></li>
+								<li><a href="https://www.instagram.com/eclez.vu" target="_blank">Instagram</a></li>
 								<li><a class="active" href="https://www.imvu.com/catalog/web_add_contact.php?contact=Eclez" target="_blank">Add</a></li>
 								<li><a href="https://www.imvu.com/catalog/web_send_message_widget.php?recipient_id=180950725" target="_blank">Send Message</a></li>
 								<li><a href="https://www.imvu.com/catalog/web_send_message_widget.php?recipient_id=180950725" target="_blank">Block</a></li>
 								<li><a href="https://www.imvu.com/catalog/web_flag_homepage.php?flag_homepage=180950725" target="_blank">Report</a></li>
+								
 							</ul>
 						</div>
 					</div>
@@ -279,21 +282,21 @@
 			<!-- End Header -->
 
 			<!-- instagram feed section -->
-			<section class="instagram-feed-section" style="height: 200px;">
+			<!-- <section class="instagram-feed-section" style="height: 200px;">
 				<h1>My Latest Products</h1>
 				<center>
 				<style type="text/css">#dev_panel{display:none}</style>
 				    
 				<iframe name="imvustylez_panel1622721004" src="https://avatars.imvu.com/catalog/web_panel.php?section=mp_left&panel=dev_panel&av=Eclez&width=950&height=250" allowtransparency="true" style="width:950px;height:250px;border:0px;"></iframe>
 			</center>
-			</section>
+			</section> -->
 			
 			<!-- End instagram feed section -->
 			
 		</div>
 		<!-- End content -->
 
-		<footer>
+		<!-- <footer>
 			<div class="container-fluid" style="padding-bottom: 2em;">
 				<div class="row">
 					<div class="col-md-6">
@@ -307,7 +310,7 @@
 					</div>
 				</div>
 			</div>
-		</footer>
+		</footer> -->
 		
 	</div>
 	<!-- End Container -->
