--- a/index.html
+++ b/index.html
@@ -296,21 +296,21 @@
 		</div>
 		<!-- End content -->
 
-		<footer>
+		<!-- <footer>
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-6">
 						<p>Copyright © 2021 by Eclez</p>
 					</div> 
-					<!-- <div class="col-md-6">
+					<div class="col-md-6">
 						<ul class="social-icons">
 							<li><a href="https://www.facebook.com/eclez.vu/">facebook</a></li>
 							<li><a href="https://www.instagram.com/eclez.vu">instagram</a></li>
 						</ul>
-					</div> -->
+					</div>
 				 </div>
 		</div>
-		</footer> 
+		</footer>  -->
 		
 	</div>
 	<!-- End Container -->
