--- a/newprod.html
+++ b/newprod.html
@@ -71,7 +71,7 @@
 
 			<!-- instagram feed section -->
 			<section class="instagram-feed-section" style="height: 50px;">
-				<h1>My Latest Products</h1>
+				<h1 style="text-decoration: underline;">My Latest Products</h1>
 				<!-- <center>
 				<style type="text/css">#dev_panel{display:none}</style>
 				    
