--- a/foot.html
+++ b/foot.html
@@ -66,21 +66,21 @@
 		<div id="content">
 
 			
-		<footer>
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<p style="text-align: right;">Copyright © 2021 by Eclez</p>
-					</div> 
+		<!-- <footer> -->
+			<!-- <div class="container-fluid"> -->
+				<!-- <div class="row"> -->
+					<!-- <div class="col-md-12"> -->
+						<p style="text-align: right;color: #222222;">Copyright © 2021 by Eclez</p>
+					<!-- </div>  -->
 					<!-- <div class="col-md-6">
 						<ul class="social-icons">
 							<li><a href="https://www.facebook.com/eclez.vu/">facebook</a></li>
 							<li><a href="https://www.instagram.com/eclez.vu">instagram</a></li>
 						</ul>
 					</div> -->
-				 </div>
-		</div>
-		</footer> 
+				 <!-- </div> -->
+		<!-- </div> -->
+		<!-- </footer>  -->
 		</div>
 		<!-- End content -->
 
