update instagram link

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						<div class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-right">
 								<li><a href="https://www.facebook.com/eclez.vu/" target="_blank">Facebook</a></li>
-								<li><a href="https://www.instagram.com/eclez.vu" target="_blank">Instagram</a></li>
+								<li><a href="https://www.instagram.com/eclez.vl" target="_blank">Instagram</a></li>
 								<li><a class="active" href="https://www.imvu.com/catalog/web_add_contact.php?contact=Eclez" target="_blank">Add</a></li>
 								<li><a href="https://www.imvu.com/catalog/web_send_message_widget.php?recipient_id=180950725" target="_blank">Send Message</a></li>
 								<li><a href="https://www.imvu.com/catalog/web_mypage.php?block=180950725" target="_blank">Block</a></li>
